# cea

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  environment.yml  pytest.ini
.codex/skills/docs-cleanup/: SKILL.md
.codex/skills/pr-merge/: SKILL.md
.codex/skills/update-agents-md/: SKILL.md
.codex/skills/version-increment/: SKILL.md
.devcontainer/: build-gfe.sh  devcontainer.json  dockerfile  setup-conda.sh
.github/workflows/: basic_build.yml  bindc_build.yml  docs.yml  publish_wheels.yml
cmake/: CompilerFlags.cmake
docs/: README.md
docs/source/: Win11-oneAPI_Walkthrough.rst  conf.py  developer_guide.rst  faq.rst  index.rst  installation.rst  quick_start.rst
docs/source/examples/: equilibrium_examples.rst  python_examples.rst  sp_derivatives.rst
docs/source/examples/equilibrium/: example5.rst
docs/source/interfaces/: python_api.rst
source/: CMakeLists.txt  detonation.f90  equilibrium.f90  equilibrium_test.pf  fits.f90  input.f90  input_test.pf  main.f90  mixture.f90  mixture_test.pf  rocket.f90  rocket_test.pf  shock.f90  thermo.f90  transport.f90  transport_test.pf
source/bind/: CMakeLists.txt  libcea.pyx
source/bind/c/: CMakeLists.txt  bindc.F90  cea.h  cea_enum.h
source/bind/c/samples/: rp1311_example1_test_structure.c  rp1311_example5.c  rp1311_example8.c  rp1311_example9.c
source/bind/matlab/: CEA.m  cea.h  cea_bindc_proto_PCWIN64.m  kernel32.h  load_cea.m
source/bind/matlab/samples/: rp1311_example1.m  rp1311_example2.m  rp1311_example3.m  rp1311_example6.m  rp1311_example7.m  rp1311_example8.m  rp1311_example9.m
source/bind/python/: CEA.pyx  cea_def.pxd
source/bind/python/cea/: __init__.py
source/bind/python/cea/samples/derivatives/: derivatives_compilation.tex  hp_derivatives.py  run_all_derivatives.sh  sp_derivatives.py  sv_derivatives.py  tp_derivatives.py  tv_derivatives.py  uv_derivatives.py
source/bind/python/cea/samples/rp1311/: example5.py  run_all_examples.sh
source/bind/python/tests/: conftest.py  test_reuse_solution.py  test_rocket_smoke.py  test_rp1311_samples.py  test_smooth_truncation.py  test_strings.py  test_validation.py
test/main_interface/: test_main.py
test/main_interface/test_output/: get_output.py
